-Added new mission tree for Alsace with with 15 missions (contribution by FrenchKnight)
-Added Russian Factionalism disaster for Kiev with 11 associated events
-Added an imperial incident that allows the Emperor to break personal unions when the senior partner is not a member of the HRE
-Added an event chain for the Emperor to call a Diet with the Thuringian and Saxon Princes
-Added 1 new estate privilege for the Mamluks
-Added 2 forgotten Industrialization events from vanilla
-Replaced the existing institution events with new ones
-Added the following alternative country names: Northumbria (Northumberland)
-Added centers of trade for Clermont and Turin
-More German localization additions

#Changes
-Changed the following flags: Blankenburg, Mansfeld, Merseburg, Querfurt, Stolberg, Wernigerode, Leisnig, Falkenstein, Hall, Limpurg, Leuchtenberg, Esslingen, Rottenmunster, Weil 
-Missions will no longer require you to increase the loyalty of estates over 60% or their landshare at all
-Admin tech 40 is now required to form Romania, but it is no longer required for Byzantium to not exist
-Austria is no longer formable by endgame nations
-After the Ascenion of Ladislaus event, Styria no longer needs Linz and Innsbruck to form Austria
-Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
-To end the Fragmentation of Poland you now need to pacify all nationalist rebels
-The Polish Church no longer supports foreigners during the Fragmentation of Poland
-Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
-Russian core countries are less likely to secede if the province owner is not an appanage
-Turkish beyliks will no longer grant Dhimmi autonomy
-Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead