@@ -34,20 +34,32 @@ byz_crisis = {
 	can_stop = {
 		OR = {
 			has_any_disaster = yes
+			#custom_trigger_tooltip = {
+			#	tooltip = byz_crisis_stop.tt
+			#	NOT = {
+			#		any_owned_province = {
+			#			any_neighbor_province = {
+			#				owner = { religion_group = muslim }
+			#			}
+			#		}
+			#		any_subject_country = {
+			#			any_owned_province = {
+			#				any_neighbor_province = {
+			#					owner = { religion_group = muslim }
+			#				}
+			#			}
+			#		}
+			#	}
+			#}
 			custom_trigger_tooltip = {
-				tooltip = byz_crisis_stop.tt
+				tooltip = byz_crisis_stop.tt2
 				NOT = {
-					any_owned_province = {
-						any_neighbor_province = {
-							owner = { religion_group = muslim }
-						}
-					}
-					any_subject_country = {
-						any_owned_province = {
-							any_neighbor_province = {
-								owner = { religion_group = muslim }
-							}
-						}
+					OR = {
+						has_country_modifier = byz_aristocrats_m
+						has_country_modifier = byz_bureaucrats_m
+						has_country_modifier = byz_defenses_m
+						has_country_modifier = byz_army_m
+						#5th modifier tba
 					}
 				}
 			}
@@ -55,24 +67,34 @@ byz_crisis = {
 	}
 
 	progress = {
+		#modifier = {
+		#	factor = 0.5
+		#	custom_trigger_tooltip = {
+		#		tooltip = byz_crisis_start.tt
+		#		OR = {
+		#			any_owned_province = {
+		#				any_neighbor_province = {
+		#					owner = { religion_group = muslim }
+		#				}
+		#			}
+		#			any_subject_country = {
+		#				any_owned_province = {
+		#					any_neighbor_province = {
+		#						owner = { religion_group = muslim }
+		#					}
+		#				}
+		#			}
+		#		}
+		#	}
+		#}
 		modifier = {
 			factor = 0.5
-			custom_trigger_tooltip = {
-				tooltip = byz_crisis_start.tt
-				OR = {
-					any_owned_province = {
-						any_neighbor_province = {
-							owner = { religion_group = muslim }
-						}
-					}
-					any_subject_country = {
-						any_owned_province = {
-							any_neighbor_province = {
-								owner = { religion_group = muslim }
-							}
-						}
-					}
-				}
+			OR = {
+				has_country_modifier = byz_aristocrats_m
+				has_country_modifier = byz_bureaucrats_m
+				has_country_modifier = byz_defenses_m
+				has_country_modifier = byz_army_m
+				#5th modifier tba
 			}
 		}
 		modifier = {
@@ -82,6 +104,18 @@ byz_crisis = {
 		modifier = {
 			factor = 0.5
 			war_exhaustion = 10
+		}
+		modifier = {
+			factor = 0.5
+			overextension_percentage = 0.01
+		}
+		modifier = {
+			factor = 0.5
+			overextension_percentage = 0.5
+		}
+		modifier = {
+			factor = 0.5
+			overextension_percentage = 1
 		}
 	}
 
