@@ -1,6 +1,21 @@
 ### VN MODIFIERS ###
 
 #New Disasters
+#Crisis of the 11th Century
+byz_aristocrats_m = {
+
+}
+byz_bureaucrats_m = {
+
+}
+byz_defenses_m = {
+
+}
+byz_army_m = {
+
+}
+#5th modifier tba
+
 #Fall of the Arpads
 treaty_of_kassa_m = {
     local_autonomy = -0.25
