@@ -2158,4 +2158,70 @@ country_decisions = {
 			factor = 1
 		}
 	}
+
+	byz_aristocrats_d = {
+		major = yes
+		potential = {
+			has_country_modifier = byz_aristocrats_m
+		}
+		allow = {
+
+		}
+		effect = {
+			remove_country_modifier = byz_aristocrats_m
+		}
+		ai_will_do = {
+			factor = 1
+		}
+	}
+
+	byz_bureaucrats_d = {
+		major = yes
+		potential = {
+			has_country_modifier = byz_bureaucrats_m
+		}
+		allow = {
+
+		}
+		effect = {
+			remove_country_modifier = byz_bureaucrats_m
+		}
+		ai_will_do = {
+			factor = 1
+		}
+	}
+
+	byz_defenses_d = {
+		major = yes
+		potential = {
+			has_country_modifier = byz_defenses_m
+		}
+		allow = {
+
+		}
+		effect = {
+			remove_country_modifier = byz_defenses_m
+		}
+		ai_will_do = {
+			factor = 1
+		}
+	}
+
+	byz_army_d = {
+		major = yes
+		potential = {
+			has_country_modifier = byz_army_m
+		}
+		allow = {
+
+		}
+		effect = {
+			remove_country_modifier = byz_army_m
+		}
+		ai_will_do = {
+			factor = 1
+		}
+
+		#5th decision tba
+	}
 }
