@@ -1705,13 +1705,21 @@ country_event = {
 	immediate = {
 		hidden_effect = {
 			set_country_flag = komnenian_restoration_flag
+			add_country_modifier = {
+				name = "the_theme_system"
+				duration = -1
+			}
 			remove_country_modifier = byz_defunding_adm
 			remove_country_modifier = byz_defunding_states
 			remove_country_modifier = byz_defunding_naval
 			remove_country_modifier = byz_defunding_sailors
 			remove_country_modifier = byz_defunding_mil
 			remove_country_modifier = byz_defunding_man
-			remove_country_modifier = the_theme_system
+			remove_country_modifier = byz_aristocrats_m
+			remove_country_modifier = byz_bureaucrats_m
+			remove_country_modifier = byz_defenses_m
+			remove_country_modifier = byz_army_m
+			#5th modifier tba
 			clr_country_flag = triumph_asia
 			clr_country_flag = triumph_anatolia
 			clr_global_flag = constantinople_restored
