@@ -17,9 +17,22 @@ change_estate_land_share = {
 1000.1.1 = {
 	set_country_flag = unformable
 	add_country_modifier = {
-		name = "the_theme_system"
+		name = "byz_aristocrats_m"
 		duration = -1
 	}
+	add_country_modifier = {
+		name = "byz_bureaucrats_m"
+		duration = -1
+	}
+	add_country_modifier = {
+		name = "byz_defenses_m"
+		duration = -1
+	}
+	add_country_modifier = {
+		name = "byz_army_m"
+		duration = -1
+	}
+	#5th modifier tba
 	set_global_flag = constantinople_restored
 	set_country_flag = triumph_greece
 	set_country_flag = triumph_balkans
@@ -213,6 +226,11 @@ change_estate_land_share = {
 }
 1071.8.26 = {
 	set_country_flag = manzikert_happened
+	remove_country_modifier = byz_aristocrats_m
+	remove_country_modifier = byz_bureaucrats_m
+	remove_country_modifier = byz_defenses_m
+	remove_country_modifier = byz_army_m
+	#5th modifier tba
 	monarch = {
 		name = "Michael VII"
 		dynasty = "Doukas"
@@ -276,6 +294,10 @@ change_estate_land_share = {
 }
 1081.4.4 = {
 	set_country_flag = komnenian_restoration_flag
+	add_country_modifier = {
+		name = "the_theme_system"
+		duration = -1
+	}
 	monarch = {
 		name = "Alexios I"
 		dynasty = "Komnenos"
