@@ -215,3 +215,12 @@
  wendish_germanization.tt: "Adopt the culture of our capital as new primary culture and get our former primary culture as accepted culture"
  unite_the_rus_title: "Unite the Rus"
  unite_the_rus_desc: "Demand absolute loyalty of our appanages to proclaim us the Tsar of all Rus."
+ byz_aristocrats_d_title: ""
+ byz_aristocrats_d_desc: ""
+ byz_bureaucrats_d_title: ""
+ byz_bureaucrats_d_desc: ""
+ byz_defenses_d_title: ""
+ byz_defenses_d_desc: ""
+ byz_army_d_title: ""
+ byz_army_d_desc: ""
+ #5th decision tba
