@@ -215,3 +215,12 @@
  wendish_germanization.tt: "Nehmt die Kultur unserer Hauptstadt als neue Primärkultur an und macht unsere frühere Primärkultur zu einer akzeptierten Kultur"
  unite_the_rus_title: "Vereint die Rus"
  unite_the_rus_desc: "Fordert die endgültige Loyalität unserer Apanagen, um uns zum Zar der ganzen Rus zu ernennen."
+ byz_aristocrats_d_title: ""
+ byz_aristocrats_d_desc: ""
+ byz_bureaucrats_d_title: ""
+ byz_bureaucrats_d_desc: ""
+ byz_defenses_d_title: ""
+ byz_defenses_d_desc: ""
+ byz_army_d_title: ""
+ byz_army_d_desc: ""
+ #5th decision tba
