@@ -487,6 +487,7 @@
 #Crisis of the 11th Century
  byz_crisis.tt: "We will lose all cores on their land and heathens may occupy it"
  byz_crisis_start.tt: "Byzantium or its subjects border a Muslim state"
+ byz_crisis_stop.tt2: "Byzantium has removed all of the following modifiers via decisions:\n§YPowerful Aristocrats§!, §YEmaciated Bureaucrats§!, §YVulnerable Defenses§!, §YShattered Army§!, §Y §!"
  byz_crisis_stop.tt: "Neither Byzantium nor its subjects border a Muslim state"
  byz_crisis.1.t: "The Battle of Manzikert"
  byz_crisis.1.d: "Continued cat-and-mouse raids along the Byzantine-Seljuk border invoked the ire of [Root.Monarch.GetTitle] [Root.Monarch.GetName], who finally amassed a large army of Imperial troops, Varangians, and foreign mercenaries, even including a group of Turks. The great Seljuk Sultan, Alp Arslan, was rumored to likewise be the personal leader of the latest marauding Turkish army. In the narrow passage at Manzikert, the two great armies met in an unavoidable engagement.\n\nAs the dust kicked up by the fearsome horses cleared, the full extent of the catastrophe became apparent. The cowardly 'mercenary' Franks had abandoned the battlefield, and the ancient Varangian Guard was wiped out entirely. The greatest nobles of the Byzantine Empire were either killed or captured, with the Turks demanding a ransom that would shake the Imperial coffers to the core. Though this defeat doesn't spell the wholesale collapse of our Empire, the way for further Turkish expansion into Anatolia now lies wide open."
