@@ -487,6 +487,7 @@
 #Crisis of the 11th Century
  byz_crisis.tt: "Wir werden alle Kerne auf ihrem Land verlieren und Ungläubige könnten es besetzen"
  byz_crisis_start.tt: "Byzanz oder seine Untertanen grenzen an einen muslimischen Staat"
+ byz_crisis_stop.tt2: "Byzantium has removed all of the following modifiers via decisions:\n§YPowerful Aristocrats§!, §YEmaciated Bureaucrats§!, §YVulnerable Defenses§!, §YShattered Army§!, §Y §!"
  byz_crisis_stop.tt: "Weder Byzanz noch seine Untertanen grenzen an einen muslimischen Staat"
  byz_crisis.1.t: "Die Schlacht von Mazikert"
  byz_crisis.1.d: "Weitere Katz-und-Maus-Überfälle entlang der byzantinisch-seldschukischen Grenze riefen den Zorn von [Root.Monarch.GetTitle] [Root.Monarch.GetName] [Root.Monarch.GetName] hervor, der schließlich eine große Armee aus kaiserlichen Truppen, Warägern und ausländischen Söldnern, darunter sogar eine Gruppe Türken, zusammenstellte. Der große seldschukische Sultan, Alp Arslan, soll angeblich ebenfalls der persönliche Anführer der jüngsten plündernden türkischen Armee gewesen sein. In der engen Passage bei Manzikert trafen die beiden großen Armeen in einer unvermeidlichen Konfrontation aufeinander.\n\nAls sich der von den verängstigten Pferden aufgewirbelte Staub legte, wurde das ganze Ausmaß der Katastrophe deutlich. Die feigen fränkischen "Söldner" hatten das Schlachtfeld verlassen und die alte Warägergarde wurde vollständig ausgelöscht. Die größten Adeligen des byzantinischen Reiches wurden entweder getötet oder gefangen genommen, wobei die Türken ein Lösegeld verlangten, das die kaiserlichen Truhen bis auf die letzte Münze ausschöpfte. Obwohl diese Niederlage nicht den vollständigen Zusammenbruch unseres Reiches bedeutet, ist der Weg für eine weitere türkische Expansion nach Anatolien nun weit offen."
