@@ -588,6 +588,15 @@
  desc_disbanded_streltsy_m: "Most of our army regiments have been disbanded, dealing a severe blow to our forces."
  appanage_during_factionalism_modifier: "Factionalism of the Rus"
  desc_appanage_during_factionalism_modifier: "The entire Kievan Rus is being drawn into a maelstrom of political devastation and instability that reaches into even the farthest corners of the Russian lands."
+ byz_aristocrats_m: "Powerful Aristocrats"
+ desc_byz_aristocrats_m: ""
+ byz_bureaucrats_m: "Emaciated Bureaucrats"
+ desc_byz_bureaucrats_m: ""
+ byz_defenses_m: "Vulnerable Defenses"
+ desc_byz_defenses_m: ""
+ byz_army_m: "Shattered Army"
+ desc_byz_army_m: ""
+ #5th modifier tba
  hrema24_opinion: "Savoyard Claims"
  hremb24_opinion: "Savoyard Friendship"
  hrema59_opinion: "Mediated Favorable Peace"
