@@ -587,6 +587,15 @@
  desc_disbanded_streltsy_m: "Die meisten unserer Armeeregimenter wurden aufgelöst, was einen schweren Schlag für unsere Streitkräfte bedeutet."
  appanage_during_factionalism_modifier: "Zersplitterung der Rus"
  desc_appanage_during_factionalism_modifier: "Die gesamte Kiewer Rus wird in einen Strudel politischer Verwüstung und Instabilität hineingezogen, der bis in die entlegensten Winkel der russischen Länder reicht."
+ byz_aristocrats_m: "Powerful Aristocrats"
+ desc_byz_aristocrats_m: ""
+ byz_bureaucrats_m: "Emaciated Bureaucrats"
+ desc_byz_bureaucrats_m: ""
+ byz_defenses_m: "Vulnerable Defenses"
+ desc_byz_defenses_m: ""
+ byz_army_m: "Shattered Army"
+ desc_byz_army_m: ""
+ #5th modifier tba
  hrema24_opinion: "Savoyardische Ansprüche"
  hremb24_opinion: "Savoyardische Freundschaft"
  hrema59_opinion: "Vermittelte günstigen Frieden"
