@@ -10,6 +10,7 @@
 -Added Russian Factionalism disaster for Kiev with 11 associated events
 -Added an imperial incident that allows the Emperor to break personal unions when the senior partner is not a member of the HRE
 -Added an event chain for the Emperor to call a Diet with the Thuringian and Saxon Princes
+-Significant changes to the leadup to the Crisis of the 11th Century disaster; added 5 new related decisions
 -Added 1 new estate privilege for the Mamluks
 -Added 2 forgotten Industrialization events from vanilla
 -Replaced the existing institution events with new ones
@@ -38,8 +39,12 @@
 -Minor history changes especially around Saxony and the Palatinate
 
 #Balance
+-Byzantium now starts in 1054 with numerous negative modifiers that must be removed via decisions to avoid the Crisis
+-Byzantium no longer starts with the Theme System modifier but can regain it after the Crisis
+-Progress toward the Crisis now accelerates if Byzantium has Overextension
+-The Crisis can no longer be stopped by releasing a buffer state and granting it provinces
 -Byzantium will no longer get free monarch points through Purple Phoenix events while they are an Eastern Monarchy
--The Seljuks will raid Byzantiums provinces already before the Crisis of the 11th Century disaster
+-The Seljuks will raid Byzantiums provinces already before the Crisis
 -It is no longer possible to take the Russian Crown while having the Eastern Monarchy government
 -Players now get recurring events to deal with the rise of the Italian Communes after the event for them to start spawning has fired
 -Slightly upped the rate at which advisor cost increases
